--- a/package.json
+++ b/package.json
@@ -3,19 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.5"
+    "babel-cli": "^6.22.2",
+    "babel-preset-latest": "^6.22.0",
+    "nodemon": "^1.11.0",
+    "react-scripts": "0.8.5",
+    "redux-devtools": "^3.3.2"
   },
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "config": "^1.25.1",
     "express": "^4.14.1",
     "immutable": "^3.8.1",
+    "mongoose": "^4.8.1",
     "normalizr": "^3.1.0",
     "react": "^15.4.2",
+    "react-cookie": "^1.0.4",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-immutable": "^3.0.11"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-server": "nodemon --watch server --exec babel-node -- server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
