--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,8 @@
 # dependencies
 node_modules
 
-# testing
-coverage
-
-# production
-build
-
 # misc
 .DS_Store
 .env
 npm-debug.log
-.idea/workspace.xml
+.idea/
