--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.14.1",
     "immutable": "^3.8.1",
     "mongoose": "^4.8.1",
+    "mongoose-url-slugs": "^0.2.1",
     "normalizr": "^3.1.0",
     "react": "^15.4.2",
     "react-cookie": "^1.0.4",
