--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "bluebird": "^3.4.7",
     "config": "^1.25.1",
     "express": "^4.14.1",
     "immutable": "^3.8.1",
