--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "bluebird": "^3.4.7",
+    "body-parser": "^1.16.1",
     "config": "^1.25.1",
     "express": "^4.14.1",
     "immutable": "^3.8.1",
@@ -22,7 +23,6 @@
     "mongoose-url-slugs": "^0.2.1",
     "normalizr": "^3.1.0",
     "react": "^15.4.2",
-    "react-cookie": "^1.0.4",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
