--- a/package.json
+++ b/package.json
@@ -14,19 +14,25 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "bcrypt": "^1.0.2",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
     "config": "^1.25.1",
     "express": "^4.14.1",
     "immutable": "^3.8.1",
+    "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.1",
     "mongoose-url-slugs": "^0.2.1",
     "normalizr": "^3.1.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
-    "redux-immutable": "^3.0.11"
+    "redux-immutable": "^3.0.11",
+    "validator": "^6.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
