--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "body-parser": "^1.16.1",
     "config": "^1.25.1",
     "express": "^4.14.1",
+    "http": "^0.0.0",
+    "http-proxy": "^1.16.2",
     "immutable": "^3.8.1",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.1",
@@ -33,6 +35,8 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-immutable": "^3.1.0",
+    "redux-thunk": "^2.2.0",
+    "superagent": "^3.4.4",
     "validator": "^6.2.1"
   },
   "scripts": {
