--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.1",
     "mongoose-url-slugs": "^0.2.1",
+    "normalize.css": "^5.0.0",
     "normalizr": "^3.1.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "radium": "^0.18.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-icons": "^2.2.3",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
